# ModPy

./: .gitignore  LICENSE  README.md  modpy_example.py  pyproject.toml
modpy/: __init__.py  elements.py  mod.py
modpy/generators/: __init__.py  base.py  fabric_1_21_11.py  registry.py
tests/: test_custom.py  test_fabric_generator.py  test_registry.py
